objects/Stage_Work_Element_Predecessor__c.object
<CustomObject>
    <fields>
        <fullName>Include__c</fullName>
        <formula>IF (  Stage_Work_Element__r.Include__c = TRUE &amp;&amp;  Predecessor_Stage_Work_Element_ID__r.Include__c = TRUE,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Predecessor_Stage_Work_Element_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Predecessor  Work Element ID</label>
        <referenceTo>Stage_Work_Element__c</referenceTo>
        <relationshipLabel>Work Element Predecessors (Predecessor Stage Work Element ID)</relationshipLabel>
        <relationshipName>Stage_Work_Element_Predecessors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Predecessor_Stage_Work_Element_Name__c</fullName>
        <formula>Predecessor_Stage_Work_Element_ID__r.Name__c</formula>
        <label>Predecessor Work Element Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Work_Element_Name__c</fullName>
        <formula>Stage_Work_Element__r.Name__c</formula>
        <label>Work Element Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Work_Element__c</fullName>
        <label>Work Element Id</label>
        <referenceTo>Stage_Work_Element__c</referenceTo>
        <relationshipLabel>Work Element Predecessors (Stage Work Element Id)</relationshipLabel>
        <relationshipName>Stage_Work_Element_Predecessors1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Work_Element__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Predecessor Process Work Element Id</label>
        <referenceTo>Work_Element__c</referenceTo>
        <relationshipLabel>Work Element Predecessors</relationshipLabel>
        <relationshipName>Stage_Work_Element_Predecessors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Work Element Predecessor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WEP-{0000000000}</displayFormat>
        <label>Work Element Predecessor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Element Predecessors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>